@@ -1,7 +1,7 @@
 package com.levitacode.apiSPA.security;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -16,12 +16,16 @@ public class UserDetailsImpl implements UserDetails {
 
     private final Usuario usuario;
 
-@Override
-public Collection<? extends GrantedAuthority> getAuthorities() {
-    String authority = "ROLE_" + usuario.getRol().name();
-    System.out.println(">> Authority asignada: " + authority); // LOG
-    return List.of(new SimpleGrantedAuthority(authority));
-}
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        if (usuario.getRol() == null) {
+            return Collections.emptyList(); // Evita NullPointer si no hay rol asignado
+        }
+        String authority = "ROLE_" + usuario.getRol().name();
+        System.out.println(">> Authority asignada: " + authority); // LOG para debug
+        return Collections.singletonList(new SimpleGrantedAuthority(authority));
+    }
+
     @Override
     public String getPassword() {
         return usuario.getPassword();
@@ -34,29 +38,21 @@ public Collection<? extends GrantedAuthority> getAuthorities() {
 
     @Override
     public boolean isAccountNonExpired() {
-        return usuario.isActivo();
+        return true; // Podés ajustar esto si tenés lógica de expiración
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return usuario.isActivo();
+        return true; // Podés usar usuario.isActivo() si querés bloquear usuarios inactivos
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return usuario.isActivo();
+        return true; // Lo mismo aquí, depende si usás expiración de contraseñas
     }
 
     @Override
     public boolean isEnabled() {
         return usuario.isActivo();
     }
-} 
-// Esta clase implementa UserDetails y proporciona la información del usuario
-// que Spring Security necesita para autenticar y autorizar al usuario.
-// Incluye el rol del usuario y verifica si la cuenta está activa.
-// Además, se utiliza en el servicio UserDetailsServiceImpl para cargar los detalles del usuario por su email.
-// La anotación @AllArgsConstructor de Lombok genera un constructor con todos los campos.
-// Esto permite crear una instancia de UserDetailsImpl pasando un objeto Usuario.
-// La clase UserDetailsImpl implementa la interfaz UserDetails de Spring Security,
-
+}
